# web-hw-13-django

./: pyproject.toml
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: urls.py  utils.py
hw_project/quotes/migrations/: 0001_initial.py  0002_alter_author_born_location_alter_author_fullname_and_more.py
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/templates/registration/: login.html  signup.html
hw_project/users/templates/users/: login.html  signup.html
hw_project/utils/: add_quotes_to_mongo.py  migration.py
